<resources>
    <string name="app_name">UComplex</string>
    <string name="events">События</string>
    <string name="disciplines">Дисциплины</string>
    <string name="users">Пользователи</string>
    <string name="portfolio">Портфолио</string>
    <string name="messages">Сообщения</string>
    <string name="calendar">Календарь</string>
    <string name="settings">Настройки</string>
    <string name="logout">Выход</string>
    <string name="info">Информация</string>
    <string name="refresh">Обновить</string>
    <string name="rename">Переименовать</string>
    <string name="delete">Удалить</string>
    <string name="add_file">Добавить файл</string>
    <string name="add_folder">Добавить папку</string>
    <string name="block">Заблокировать</string>
    <string name="search">Поиск</string>
    <string name="sotrudnik">Сотрудник</string>
    <string name="administrator">Администратор</string>
    <string name="sub_administrator">Суб-Администратор</string>
    <string name="prepodvatel">Преподаватель</string>
    <string name="student">Студент</string>
    <string name="metodist_po_raspisaniyu">Методист по расписанию</string>
    <string name="metodist_ko">Методист КО</string>
    <string name="bibliotekar">Библиотекарь</string>
    <string name="tehsekretar">Техсекретарь</string>
    <string name="abiturient">Абитуриент</string>
    <string name="uchebny_otdel">Учебный отдел</string>
    <string name="rukovoditel">Руководитель</string>
    <string name="monitoring">Мониторинг</string>
    <string name="dekan">Декан</string>
    <string name="otdel_kadrov">Отдел кадров</string>
    <string name="drawer_open">open</string>
    <string name="drawer_closed">closed</string>
    <string name="uc_description">Добро пожаловать\n в uComplex</string>
    <string name="prompt_login">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="sign_in">Войти</string>
    <string name="forgot_pass">Забыли пароль?</string>
    <string name="error_wrong_user_type">Неверный тип пользователя.</string>
    <string name="error_invalid_login">Неверные данные</string>
    <string name="error_invalid_email">Не валидный электронный адрес</string>
    <string name="error_invalid_password">Пароль слишком которткий</string>
    <string name="error_incorrect_password">Пароль должен состоять из 3 и более символов</string>
    <string name="error_field_required">Обязательное поле</string>
    <string name="error_check_internet">Проверьте интернет соединение.</string>
    <string name="error_login">Не удалось войти</string>
    <string name="ok">Готово</string>
    <string name="cancel">Отмена</string>
    <string name="restore_password">Восстановление пароля</string>
    <string name="email_address">Адрес электронной почты</string>
    <string name="reset_password_sent">На указанный адрес отправленна ссылка для восстановления пароля.</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="load_more">Загрузить еще</string>
    <string name="error_loadig_data">Ошибка при загрузке данных</string>
    <string name="error_loadig_file">Ошибка при загрузке файла</string>
    <string name="file_download_started">Загрузка файла началась</string>
    <string name="file_download_complete">Загрузка файла завершена</string>
    <string name="file_saved_to_downloads">Файл сохранен в папку "Загрузки"</string>
    <string name="file_is_downloading">Загрузка файла из Ucomplex</string>
    <string name="downloading">Загрузка</string>
    <string name="need_storage_permissions">Необходимо разрешить доступ к хранилищу в для данного приложения</string>
    <string name="subjects">Дисциплины</string>
    <string name="zachet">Зачет</string>
    <string name="exam">Экзамен</string>
    <string name="samostoyatelnaya">Самостоятельная работа</string>
    <string name="no_internet_str">Пожалуйста, проверьте ваше интернет соединение</string>
    <string name="no_content_str">Нет контента для отображения</string>
    <string name="no_dilogs_str">Нет диалогов</string>
    <string name="empty" />
    <string name="profile_picture">Аватарка</string>
    <string name="subject">Дисциплина</string>
    <string name="lecturers">Преподаватели</string>
    <string name="attendanceWithFormat" formatted="false">Посещаемость: %1$s</string>
    <string name="average_mark_formatter">Средняя успеваемость: %1$s</string>
    <string name="average_mark">Средняя успеваемость</string>
    <string name="subject_attendance">Посещаемость по предмету:</string>
    <string name="subject_image">Subject Image</string>
    <string name="clock_icon"></string>
    <string name="open_file_with">Открыть используя</string>
    <string name="storage_access_denied">Вы не разрешили доступ к пямяти. Открытие загруженных файлов будет не возможна.</string>
    <string name="file_was_deleted">Файл был удален</string>
    <string name="error_deleting_file">Ошибка при удалении файла</string>
    <string name="share">Поделиться</string>
    <string name="error">Ошибка</string>
    <string name="support">Техподдержка</string>
    <string name="online">Онлайн</string>
    <string name="friends">Друзья</string>
    <string name="group">Группа</string>
    <string name="blacklist">Черный список</string>
    <string name="pick_image">Выберите фотографи</string>
    <string name="pick_document">Выберите документы</string>
    <string name="file_uploaded">Отправка файла завершена</string>
    <string name="error_file_upload">Ошибка при выгрузке файла</string>
    <string name="just_now">Сейчас</string>
    <string name="upload_started">Отправка файла началась</string>
    <string name="upload_file">Отправить файл</string>
    <string name="folder_created">Папка добавленна</string>
    <string name="error_creating_folder">Ошибка при создании пробки</string>
    <string name="storage_permission_declined">Вы не разрешили доступ к пямяти. Загрузка файлов будет не возможна.</string>
    <string name="materials">Материалы</string>
    <string name="timeline">Лента</string>
    <string name="download_started">Загрузка файла началась.</string>
    <string name="authorization_error">Не верные данные</string>
    <string name="check_internet">Проверте интернет соединение</string>
    <string name="error_while_choosing_file">Ошибка при выборе файла</string>
    <string name="Done">Готово</string>
    <string name="name_cant_be_empty">Название не может быть пустым.</string>
    <string name="error_renaming_file">Ошибка при переименовании</string>
    <string name="write_message">Написать сообщение</string>
    <string name="add_to_friends">В друзья</string>
    <string name="remove_friend">Убрать</string>
    <string name="unblock">Разблокировать</string>
    <string name="teachers">Преподаватели</string>
    <string name="offline_mode">Оффлайн режим</string>
    <string name="default_event_name">UComplex</string>
    <string name="message">Сообщение</string>
    <string name="event_protocol_zanyatiya">протокол занятия</string>
    <string name="event_protocol_robezhnogo_kontrolya">протокол рубежного контроля</string>
    <string name="event_ekzamenazionnuyu_vedomost">экзаменационную ведомость</string>
    <string name="event_individualnoe_zanyatie">индивидуальное занятие</string>
    <string name="event_zagruzhen_material_po_discipline">Загружен материал по дисциплине</string>
    <string name="event_propodavatel">Преподаватель</string>
    <string name="event_zapolnil">заполнил</string>
    <string name="event_po_discipline">по дисциплине</string>
    <string name="event_vy_proizveli_oplatu">Вы произвели оплату за</string>
    <string name="event_j_semester">-й семестр</string>
    <string name="event_uchebnogo_goda">учебного года</string>
    <string name="event_vy_priglasheny_na_meropriyatie">Вы приглашены на участие в мероприятии</string>
    <string name="event_kotoroe_sostoitsya">которое состоится</string>
    <string name="event_book_added">В книжную полку добавлена книга</string>
    <string name="event_photo_declined">Ваша фотография отклонена из-за несоответствия условиям загрузки личной фотографии.</string>
    <string name="event_system_message">СИСТЕМНОЕ СООБЩЕНИЕ</string>
    <string name="activity">Активность</string>
    <string name="faculty">Факультет</string>
    <string name="department">Кафедра:</string>
    <string name="profile_is_closed">Профиль закрыт</string>
    <string name="profile">Профиль</string>
    <string name="never_been_online">Не было в сети</string>
    <string name="enrolment_year">Год поступления</string>
    <string name="study_form">Форма обучения</string>
    <string name="education_level">Уровень образования</string>
    <string name="payment_form">Форма оплаты</string>
    <string name="speciality">Специальность</string>
    <string name="overall_attendance">Общая посещаемость</string>
    <string name="average_rating">Место в общем рейтинге</string>
    <string name="average_rating_in_faculty">Место в рейтинге по факультету</string>
    <string name="no_information">Нет информации</string>
    <string name="teaching_disciplines">Преподаваемые дисциплины</string>
    <string name="disciplines_in_timetable">Дисциплины в расписании</string>
    <string name="study_rank">Ученое звание</string>
    <string name="docent">доцент</string>
    <string name="professor">профессор</string>
    <string name="member_correspondent">член-корреспондент</string>
    <string name="academic">академик</string>
    <string name="not_specified">не указанно</string>
    <string name="study_degree">Ученая степень</string>
    <string name="upqualifications">Повышение квалификации и переподготовка</string>
    <string name="short_bio">Краткая биография</string>
    <string name="personal_info">Личная информация</string>
    <string name="_10">10</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_7">7</string>
    <string name="rating">Рейтинг</string>
    <string name="question1">Сколько времени Вы уделяете подготовке к семинарам данного преподавателя?</string>
    <string name="question2">Насколько часто Вы посещаете дисциплины данного преподавателя?</string>
    <string name="question3">Насколько преподаватель владеет содержанием учебного материала?</string>
    <string name="question4">Оказывает ли преподаватель помощь обучающимся в освоении учебного материала во внеучебное время?</string>
    <string name="question5">Насколько преподаватель умеет увлечь своим предметом?</string>
    <string name="question6">Насколько преподаватель объективен в оценке знаний студентов?</string>
    <string name="question7">Пользуется ли преподаватель мультимедийными средствами или полезными раздаточными и дополнительными материалами?</string>
    <string name="question8">Приводит ли преподаватель практические примеры применения преподаваемых теоретических знаний?</string>
    <string name="discipline_name">Название предмета</string>
    <string name="performance">Успеваемость</string>
    <string name="attendance">Посещаемость:</string>
    <string name="new_number">Новый номер</string>
    <string name="do_not_show_in_search">Не показывать в поиске</string>
    <string name="profile_image">profile_image</string>
    <string name="password_change">Смена пароля</string>
    <string name="current_password">Текущий пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="enter_password_again">Введите пароль еще раз</string>
    <string name="phone_number">Номер телефона</string>
    <string name="new_email_address">Новый адрес электонной почты</string>
    <string name="confidentiality">Конфиденциальность</string>
    <string name="closed_profile">Закрытый профиль:</string>
</resources>