<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="18dp"
        android:text="Сколько времени Вы уделяете подготовке к семинарам данного преподавателя?"
        android:textColor="@color/color_uc_menuHeader" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:background="@color/color_uc_ListSeparator"
        android:weightSum="10"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:baselineAligned="false">

        <FrameLayout
            android:id="@+id/mark1"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/mask1"
                android:layout_width="35dp"
                android:layout_height="25dp"
                android:background="@color/rating1"
                android:visibility="invisible"
                />

            <Button
                android:id="@+id/question_button_1"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@android:color/transparent"
                android:text="@string/_1"
                android:textColor="@color/colorBlack" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/mark2"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/mask2"
                android:layout_width="35dp"
                android:layout_height="25dp"
                android:background="@color/rating2"
                android:visibility="invisible"
                />

            <Button
                android:id="@+id/question_button_2"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@android:color/transparent"
                android:text="@string/_2"
                android:textColor="@color/colorBlack" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/mark3"
            android:layout_weight="1"
            android:layout_width="35dp"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/mask3"
                android:layout_width="35dp"
                android:layout_height="25dp"
                android:background="@color/rating3"
                android:visibility="invisible" />

            <Button
                android:id="@+id/question_button_3"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@android:color/transparent"
                android:text="@string/_3"
                android:textColor="@color/colorBlack" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/mark4"
            android:layout_weight="1"
            android:layout_width="35dp"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/mask4"
                android:layout_width="35dp"
                android:layout_height="25dp"
                android:background="@color/rating4"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/question_button_4"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@android:color/transparent"
                android:text="@string/_4"
                android:textColor="@color/colorBlack" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/mark5"
            android:layout_weight="1"
            android:layout_width="35dp"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/mask5"
                android:layout_width="35dp"
                android:layout_height="25dp"
                android:background="@color/rating5"
                android:visibility="invisible" />

            <Button
                android:id="@+id/question_button_5"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@android:color/transparent"
                android:text="@string/_5"
                android:textColor="@color/colorBlack" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/mark6"
            android:layout_weight="1"
            android:layout_width="35dp"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/mask6"
                android:layout_width="35dp"
                android:layout_height="25dp"
                android:background="@color/rating6"
                android:visibility="invisible" />

            <Button
                android:id="@+id/question_button_6"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@android:color/transparent"
                android:text="@string/_6"
                android:textColor="@color/colorBlack"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/mark7"
            android:layout_weight="1"
            android:layout_width="35dp"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/mask7"
                android:layout_width="35dp"
                android:layout_height="25dp"
                android:background="@color/rating7"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/question_button_7"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@android:color/transparent"
                android:text="@string/_7"
                android:textColor="@color/colorBlack"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/mark8"
            android:layout_weight="1"
            android:layout_width="35dp"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/mask8"
                android:layout_width="35dp"
                android:layout_height="25dp"
                android:background="@color/rating8"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/question_button_8"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@android:color/transparent"
                android:text="@string/_8"
                android:textColor="@color/colorBlack"/>


        </FrameLayout>

        <FrameLayout
            android:id="@+id/mark9"
            android:layout_weight="1"
            android:layout_width="35dp"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/mask9"
                android:layout_width="35dp"
                android:layout_height="25dp"
                android:background="@color/rating9"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/question_button_9"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@android:color/transparent"
                android:text="@string/_9"
                android:textColor="@color/colorBlack"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/mark10"
            android:layout_weight="1"
            android:layout_width="35dp"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/mask10"
                android:layout_width="35dp"
                android:layout_height="25dp"
                android:background="@color/rating10"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/question_button_10"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@android:color/transparent"
                android:text="@string/_10"
                android:textColor="@color/colorBlack"/>

        </FrameLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/question_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="12dp"
        android:paddingBottom="18dp"
        android:text="1 - не посещаю совсем, 10 - посещаю 90% занятий и более"
        android:textColor="@color/color_uc_ListText"
        android:textSize="9sp" />


</LinearLayout>