<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <TextView
        android:id="@+id/subject_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/discipline_name"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/attendance_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subject_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/attendance"
        android:textColor="@color/color_uc_ListText"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/attendance_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subject_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/attendance_key"
        android:textColor="@color/colorBlack"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/mark_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/attendance_key"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/performance"
        android:textColor="@color/color_uc_ListText"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/mark_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/attendance_key"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/mark_key"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:paddingBottom="10dp"/>

</RelativeLayout>